Remove overflow scroll of featured work info, fix navbar toggler button not expanding in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -142,9 +142,6 @@ body {
 #projects .featured-card-img {
   height: 500px;
 }
-#projects .featured-card-info {
-  height: 500px;
-}
 #projects .project-card-info {
   background-color: rgb(97, 97, 97);
   color: white;
